tomcat/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: tomcat-service-new
spec:
  selector:
    app: tomcat
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
